--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -147,6 +147,13 @@
     <script src="scripts/components/language/language.service.js"></script>
     <script src="scripts/components/language/language.controller.js"></script>
     <script src="scripts/components/auth/provider/auth.oauth2.service.js"></script>
+    <script src="scripts/app/entities/apartment/apartment.js"></script>
+    <script src="scripts/app/entities/apartment/apartment.controller.js"></script>
+    <script src="scripts/app/entities/apartment/apartment-dialog.controller.js"></script>
+    <script src="scripts/app/entities/apartment/apartment-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/apartment/apartment-detail.controller.js"></script>
+    <script src="scripts/components/entities/apartment/apartment.service.js"></script>
+    <script src="scripts/components/entities/apartment/apartment.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
