--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -154,6 +154,13 @@
     <script src="scripts/app/entities/apartment/apartment-detail.controller.js"></script>
     <script src="scripts/components/entities/apartment/apartment.service.js"></script>
     <script src="scripts/components/entities/apartment/apartment.search.service.js"></script>
+    <script src="scripts/app/entities/location/location.js"></script>
+    <script src="scripts/app/entities/location/location.controller.js"></script>
+    <script src="scripts/app/entities/location/location-dialog.controller.js"></script>
+    <script src="scripts/app/entities/location/location-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/location/location-detail.controller.js"></script>
+    <script src="scripts/components/entities/location/location.service.js"></script>
+    <script src="scripts/components/entities/location/location.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
