--- a/src/main/webapp/scripts/app/entities/apartment/apartment-dialog.html
+++ b/src/main/webapp/scripts/app/entities/apartment/apartment-dialog.html
@@ -76,6 +76,12 @@
                      />
         </div>
 
+        <div class="form-group">
+            <label translate="onlinerrealtpagesApp.apartment.location" for="field_location">location</label>
+            <select class="form-control" id="field_location" name="location" ng-model="apartment.location" ng-options="location as location.id for location in locations track by location.id">
+                <option value=""></option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
