Price added + mapping fixed. Stable version?

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -161,6 +161,13 @@
     <script src="scripts/app/entities/location/location-detail.controller.js"></script>
     <script src="scripts/components/entities/location/location.service.js"></script>
     <script src="scripts/components/entities/location/location.search.service.js"></script>
+    <script src="scripts/app/entities/price/price.js"></script>
+    <script src="scripts/app/entities/price/price.controller.js"></script>
+    <script src="scripts/app/entities/price/price-dialog.controller.js"></script>
+    <script src="scripts/app/entities/price/price-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/price/price-detail.controller.js"></script>
+    <script src="scripts/components/entities/price/price.service.js"></script>
+    <script src="scripts/components/entities/price/price.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
