Apartment rent entity added

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -168,6 +168,13 @@
     <script src="scripts/app/entities/price/price-detail.controller.js"></script>
     <script src="scripts/components/entities/price/price.service.js"></script>
     <script src="scripts/components/entities/price/price.search.service.js"></script>
+    <script src="scripts/app/entities/apartmentRent/apartmentRent.js"></script>
+    <script src="scripts/app/entities/apartmentRent/apartmentRent.controller.js"></script>
+    <script src="scripts/app/entities/apartmentRent/apartmentRent-dialog.controller.js"></script>
+    <script src="scripts/app/entities/apartmentRent/apartmentRent-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/apartmentRent/apartmentRent-detail.controller.js"></script>
+    <script src="scripts/components/entities/apartmentRent/apartmentRent.service.js"></script>
+    <script src="scripts/components/entities/apartmentRent/apartmentRent.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
