Apartment, Location, Price entities

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -147,6 +147,27 @@
     <script src="scripts/components/language/language.service.js"></script>
     <script src="scripts/components/language/language.controller.js"></script>
     <script src="scripts/components/auth/provider/auth.oauth2.service.js"></script>
+    <script src="scripts/app/entities/location/location.js"></script>
+    <script src="scripts/app/entities/location/location.controller.js"></script>
+    <script src="scripts/app/entities/location/location-dialog.controller.js"></script>
+    <script src="scripts/app/entities/location/location-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/location/location-detail.controller.js"></script>
+    <script src="scripts/components/entities/location/location.service.js"></script>
+    <script src="scripts/components/entities/location/location.search.service.js"></script>
+    <script src="scripts/app/entities/apartment/apartment.js"></script>
+    <script src="scripts/app/entities/apartment/apartment.controller.js"></script>
+    <script src="scripts/app/entities/apartment/apartment-dialog.controller.js"></script>
+    <script src="scripts/app/entities/apartment/apartment-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/apartment/apartment-detail.controller.js"></script>
+    <script src="scripts/components/entities/apartment/apartment.service.js"></script>
+    <script src="scripts/components/entities/apartment/apartment.search.service.js"></script>
+    <script src="scripts/app/entities/price/price.js"></script>
+    <script src="scripts/app/entities/price/price.controller.js"></script>
+    <script src="scripts/app/entities/price/price-dialog.controller.js"></script>
+    <script src="scripts/app/entities/price/price-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/price/price-detail.controller.js"></script>
+    <script src="scripts/components/entities/price/price.service.js"></script>
+    <script src="scripts/components/entities/price/price.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
