Price created field is renamed to updated

--- a/src/main/webapp/scripts/app/entities/price/price-detail.html
+++ b/src/main/webapp/scripts/app/entities/price/price-detail.html
@@ -28,10 +28,10 @@
             </tr>
             <tr>
                 <td>
-                    <span translate="onlinerrealtpagesApp.price.created">Created</span>
+                    <span translate="onlinerrealtpagesApp.price.updated">Created</span>
                 </td>
                 <td>
-                    <span class="form-control-static">{{price.created | date:'medium'}}</span>
+                    <span class="form-control-static">{{price.updated | date:'medium'}}</span>
                 </td>
             </tr>
             <tr>
