--- a/src/main/webapp/scripts/app/entities/price/prices.html
+++ b/src/main/webapp/scripts/app/entities/price/prices.html
@@ -6,7 +6,7 @@
             <div class="col-xs-4 no-padding-left">
                 <button class="btn btn-primary" ui-sref="price.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span 
+                    <span
 class="hidden-xs"                        translate="onlinerrealtpagesApp.price.home.createLabel">Create new Price
                     </span>
                 </button>
@@ -33,7 +33,7 @@ class="hidden-xs"                        translate="onlinerrealtpagesApp.price.h
                     <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="priceUsd"><span translate="onlinerrealtpagesApp.price.priceUsd">PriceUsd</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="priceRuble"><span translate="onlinerrealtpagesApp.price.priceRuble">PriceRuble</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="created"><span translate="onlinerrealtpagesApp.price.created">Created</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="updated"><span translate="onlinerrealtpagesApp.price.updated">Created</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="apartment.id"><span translate="onlinerrealtpagesApp.price.apartment">apartment</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
@@ -43,7 +43,7 @@ class="hidden-xs"                        translate="onlinerrealtpagesApp.price.h
                     <td><a ui-sref="price.detail({id:price.id})">{{price.id}}</a></td>
                     <td>{{price.priceUsd}}</td>
                     <td>{{price.priceRuble}}</td>
-                    <td>{{price.created | date:'medium'}}</td>
+                    <td>{{price.updated | date:'medium'}}</td>
                     <td>
                         <a ui-sref="apartment.detail({id:price.apartment.id})">{{price.apartment.id}}</a>
                     </td>
@@ -51,7 +51,7 @@ class="hidden-xs"                        translate="onlinerrealtpagesApp.price.h
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="price.detail({id:price.id})"
-                                    class="btn btn-info btn-sm"> 
+                                    class="btn btn-info btn-sm">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.view"></span>
                             </button>
@@ -63,7 +63,7 @@ class="hidden-xs"                        translate="onlinerrealtpagesApp.price.h
                             </button>
                             <button type="submit"
                                     ui-sref="price.delete({id:price.id})"
-                                    class="btn btn-danger btn-sm">                                    
+                                    class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
                             </button>
