Added ApartmentSale ApartmentSale extends Apartment

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -175,6 +175,13 @@
     <script src="scripts/app/entities/apartmentRent/apartmentRent-detail.controller.js"></script>
     <script src="scripts/components/entities/apartmentRent/apartmentRent.service.js"></script>
     <script src="scripts/components/entities/apartmentRent/apartmentRent.search.service.js"></script>
+    <script src="scripts/app/entities/apartmentSale/apartmentSale.js"></script>
+    <script src="scripts/app/entities/apartmentSale/apartmentSale.controller.js"></script>
+    <script src="scripts/app/entities/apartmentSale/apartmentSale-dialog.controller.js"></script>
+    <script src="scripts/app/entities/apartmentSale/apartmentSale-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/apartmentSale/apartmentSale-detail.controller.js"></script>
+    <script src="scripts/components/entities/apartmentSale/apartmentSale.service.js"></script>
+    <script src="scripts/components/entities/apartmentSale/apartmentSale.search.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
