--- a/src/main/webapp/scripts/app/entities/apartmentRent/apartmentRents.html
+++ b/src/main/webapp/scripts/app/entities/apartmentRent/apartmentRents.html
@@ -6,7 +6,7 @@
             <div class="col-xs-4 no-padding-left">
                 <button class="btn btn-primary" ui-sref="apartmentRent.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span 
+                    <span
 class="hidden-xs"                        translate="onlinerrealtpagesApp.apartmentRent.home.createLabel">Create new ApartmentRent
                     </span>
                 </button>
@@ -31,6 +31,10 @@ class="hidden-xs"                        translate="onlinerrealtpagesApp.apartme
             <thead>
                 <tr jh-sort="predicate" ascending="reverse" callback="loadAll()">
                     <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="apartmentId"><span translate="onlinerrealtpagesApp.apartment.apartmentId">ApartmentId</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="created"><span translate="onlinerrealtpagesApp.apartment.created">Created</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="updated"><span translate="onlinerrealtpagesApp.apartment.updated">Updated</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="location.id"><span translate="onlinerrealtpagesApp.apartment.location">location</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="type"><span translate="onlinerrealtpagesApp.apartmentRent.type">Type</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="owner"><span translate="onlinerrealtpagesApp.apartmentRent.owner">Owner</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
@@ -39,27 +43,40 @@ class="hidden-xs"                        translate="onlinerrealtpagesApp.apartme
             <tbody>
                 <tr ng-repeat="apartmentRent in apartmentRents track by apartmentRent.id">
                     <td><a ui-sref="apartmentRent.detail({id:apartmentRent.id})">{{apartmentRent.id}}</a></td>
+                    <td>
+                        {{apartmentRent.apartmentId}}
+                        <a href="{{apartmentRent.url}}" target="_blank">
+                            <span class="glyphicon glyphicon-link"></span>
+                        </a>
+                    </td>
+                    <td>{{apartmentRent.created | date:'short'}}</td>
+                    <td>{{apartmentRent.updated | date:'short'}}</td>
+                    <td>
+                        <a ui-sref="location.detail({id:apartment.location.id})">{{apartmentRent.location.address}}</a>
+                    </td>
                     <td translate="{{'onlinerrealtpagesApp.RentType.' + apartmentRent.type}}">{{apartmentRent.type}}</td>
-                    <td>{{apartmentRent.owner}}</td>
+                    <td>
+                        <span class="label label-danger" ng-show="!apartmentRent.owner"
+                              translate="onlinerrealtpagesApp.apartmentRent.agent">Agent</span>
+                        <span class="label label-success" ng-show="apartmentRent.owner"
+                          translate="onlinerrealtpagesApp.apartmentRent.owner">Owner</span>
+                    </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="apartmentRent.detail({id:apartmentRent.id})"
-                                    class="btn btn-info btn-sm"> 
+                                    class="btn btn-info btn-sm">
                                 <span class="glyphicon glyphicon-eye-open"></span>
-                                <span class="hidden-xs hidden-sm" translate="entity.action.view"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="apartmentRent.edit({id:apartmentRent.id})"
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
-                                <span class="hidden-xs hidden-sm" translate="entity.action.edit"></span>
                             </button>
                             <button type="submit"
                                     ui-sref="apartmentRent.delete({id:apartmentRent.id})"
-                                    class="btn btn-danger btn-sm">                                    
+                                    class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
-                                <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
                             </button>
                         </div>
                     </td>
